--- a/Week1/AssignmentDec19/basic table/index.html
+++ b/Week1/AssignmentDec19/basic table/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="./css/index.css">
 <head>
-<title>Page Title</title>
+<title>Basic Table</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <table>
+        <tr>
+          <th>Station</th>
+          <th>Latitude</th>
+          <th>Longitude</th>
+          <th colspan="4">Year<br/>
+            <tc style="border: 1px solid black">1993</tc>
+            <tc>1994</tc>
+            <tc>2012</tc>
+            <tc>2013</tc> 
+          </th>
+          
+        </tr>
+        <tr>
+          <td>Dummy</td>
+          <td>27.82</td>
+          <td>13</td>
+          <td>121</td>
+          <td>1323</td>
+          <td>213</td>
+          <td>56.7</td>
+        </tr>
+        <tr>
+            <td>Dummy</td>
+            <td>27.82</td>
+            <td>13</td>
+            <td>121</td>
+            <td>1323</td>
+            <td>213</td>
+            <td>56.7</td>
+          </tr>
+          <tr>
+            <td>Dummy</td>
+            <td>27.82</td>
+            <td>13</td>
+            <td>121</td>
+            <td>1323</td>
+            <td>213</td>
+            <td>56.7</td>
+          </tr>
+          <tr>
+            <td>Dummy</td>
+            <td>27.82</td>
+            <td>13</td>
+            <td>121</td>
+            <td>1323</td>
+            <td>213</td>
+            <td>56.7</td>
+          </tr>
+          <tr>
+            <td>Dummy</td>
+            <td>27.82</td>
+            <td>13</td>
+            <td>121</td>
+            <td>1323</td>
+            <td>213</td>
+            <td>56.7</td>
+          </tr>
+      </table>
 </body>
 </html>
