--- a/Week1/AssignmentDec19/basic page/index.html
+++ b/Week1/AssignmentDec19/basic page/index.html
@@ -6,8 +6,18 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>this is my banner text</h1>
+<ul>
+    <li>HOME</li>
+    <li>INFO</li>
+    <li>CONTACT</li>
+    <li>HUBPAGES</li>
+  </ul>
+
+<h2>This is my paragraph header</h2>
+<p>This is a dummy line efueh euhef oaso paoefn eos sad asdas.</p>
+<p>This is a dummy line efueh euhef oaso paoefn.</p>
+<p>This is a dummy line efueh euhef oaso.</p>
 
 </body>
 </html>
