Made the font changes to Google : Poppins

--- a/Week1/Assignment20thDec/contact.html
+++ b/Week1/Assignment20thDec/contact.html
@@ -30,7 +30,7 @@
 
       <div class="position-relative overflow-hidden p-4 p-md-5 m-md-3 text-center bg-light " >
         <div class="col-md-5 p-lg-5 mx-auto my-5">
-          <h1 class="display-4 font-weight-normal">CONTACT US</h1>
+          <h1 class="display-4 font-weight-normal" style="font-family: Poppins;" >CONTACT US</h1>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
         <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
