Updated the coloring and font sizing

--- a/Week1/Assignment20thDec/index.html
+++ b/Week1/Assignment20thDec/index.html
@@ -19,7 +19,7 @@
   <body> 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
       <a class="my-0 mr-md-auto" href="#" style="color: black;">
-        <img src="./assets/images/WADDCO.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="https://themes.3rdwavemedia.com/coderpro/bs5/1.0/assets/images/site-logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
         WADDCO
       </a>
       <nav class="my-2 my-md-0 mr-md-3">
@@ -35,8 +35,8 @@
     
       <div class="position-relative overflow-hidden p-4 p-md-5 m-md-3 text-center bg-light " style="padding-top: 70px;">
         <div class="col-md-5 p-lg-5 mx-auto my-5">
-          <h1 class="display-4 font-weight-normal">Punny headline</h1>
-          <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
+          <h1 class="display-4" style="font-weight: 700;">WADDCO</h1>
+          <p class="lead font-weight-normal">Your ultimate dgital partner for the diruptive solutions in the 21st century that everyone needs</p>
           <a class="btn btn-outline-secondary" href="#">Coming soon</a>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
