--- a/Week1/Assignment20thDec/index.html
+++ b/Week1/Assignment20thDec/index.html
@@ -15,10 +15,11 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
     <title>WADDCO - Fullstack Development Digital Solutions</title>
+    <link rel="icon" type="image/x-icon" href="https://themes.3rdwavemedia.com/coderpro/bs5/1.0/assets/images/site-logo.svg">
   </head>
   <body> 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-      <a class="my-0 mr-md-auto" href="#" style="color: black;">
+      <a class="my-0 mr-md-auto" href="#" style="color: black;font-weight: bolder;font-size: larger;">
         <img src="https://themes.3rdwavemedia.com/coderpro/bs5/1.0/assets/images/site-logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
         WADDCO
       </a>
@@ -27,17 +28,17 @@
         <a class="p-2 text-dark" href="#">About Us</a>
         <a class="p-2 text-dark" href="contact.html">Contact Us</a>
       </nav>
-      <a class="btn btn-outline-primary" href="tel:+4733378901">Call Us</a>
+      <a class="btn btn-primary" href="tel:+4733378901">Call Us</a>
     </div>
-    <main role="main">
+    <main role="main"style="background-color: #F5F6FE;">
 
       
     
-      <div class="position-relative overflow-hidden p-4 p-md-5 m-md-3 text-center bg-light " style="padding-top: 70px;">
+      <div class="position-relative overflow-hidden p-4 p-md-5 m-md-3 text-center bg-white " style="padding-top: 70px;">
         <div class="col-md-5 p-lg-5 mx-auto my-5">
           <h1 class="display-4" style="font-weight: 700;">WADDCO</h1>
-          <p class="lead font-weight-normal">Your ultimate dgital partner for the diruptive solutions in the 21st century that everyone needs</p>
-          <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+          <p class="lead font-weight-normal">LEADING DIGITAL TRANSFORMATION PROVIDER WITH USER-CENTRIC SOLUTIONS FOR INDUSTRIES</p>
+          <a class="btn btn-primary" href="#">Download Portfolio</a>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
         <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -48,20 +49,23 @@
 
       <div class="container">
         <!-- Example row of columns -->
+        <div class="row center">
+          <h2 style="text-align: center;padding-top: 30px;font-size:32px;font-weight: 700;">Why US?</h2>
+        </div>
         <div class="row">
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+          <div class="col-md-4" style="background-color: white;border-radius: 5px;">
+            <h2 style="font-weight: 600;font: size 20px;font-height:24px;padding-top: 25px;">Global Presence</h2>
+            <p>Our 500+ experts have successfully provided full-cycle IT services to our client network from 21 nations worldwide, with 350+ projects, and is expanding rapidly</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Standing on the frontline when the bombs start to fall. Heaven is jealous of our love, angels are crying from up above. Can't replace you with a million rings. Boy, when you're with me I'll give you a taste. There’s no going back. Before you met me I was alright but things were kinda heavy. Heavy is the head that wears the crown.</p>
+          <div class="col-md-4" style="background-color: white;border-radius: 5px;">
+            <h2 style="font-weight: 600;padding-top: 25px;">Our Clients</h2>
+            <p>Proudly partner with 250+ clients from diverse industries including Banking & Finance, Automotive, Retail, Health Care, Education, Media & Entertainment</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Playing ping pong all night long, everything's all neon and hazy. Yeah, she's so in demand. She's sweet as pie but if you break her heart. But down to earth. It's time to face the music I'm no longer your muse. I guess that I forgot I had a choice.</p>
+          <div class="col-md-4" style="background-color: white;border-radius: 5px;">
+            <h2 style="font-weight: 600;padding-top: 25px;">Our Offices</h2>
+            <p>With international offices located in multiple countries, we serve our Clients with main mission: Your Trust Is Our Ultimate Success</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>
