--- a/Week1/Assignment20thDec/index.html
+++ b/Week1/Assignment20thDec/index.html
@@ -49,9 +49,8 @@
 
       <div class="container">
         <!-- Example row of columns -->
-        <div class="row center">
-          <h2 style="text-align: center;padding-top: 30px;font-size:32px;font-weight: 700;">Why US?</h2>
-        </div>
+        <h2 style="text-align: center;padding-top: 30px;font-size:32px;font-weight: 700;">Why US?</h2>
+        <p style="text-align: center;padding-bottom: 20px;">Some of our company's features</p>
         <div class="row">
           <div class="col-md-4" style="background-color: white;border-radius: 5px;">
             <h2 style="font-weight: 600;font: size 20px;font-height:24px;padding-top: 25px;">Global Presence</h2>
