--- a/Week1/Assignment20thDec/contact.html
+++ b/Week1/Assignment20thDec/contact.html
@@ -13,14 +13,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/contact.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-
+    <link rel="stylesheet" href="./css/navbar.css">
     <title>Contact Us</title>
     <link rel="icon" type="image/x-icon" href="https://themes.3rdwavemedia.com/coderpro/bs5/1.0/assets/images/site-logo.svg">
   </head>
   <body> 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-      <a class="my-0 mr-md-auto" href="#" style="color: black;">
-        <img src="./assets/images/WADDCO.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      <a class="my-0 mr-md-auto logo-link" href="index.html">
+        <img src="https://themes.3rdwavemedia.com/coderpro/bs5/1.0/assets/images/site-logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
         WADDCO
       </a>
       <nav class="my-2 my-md-0 mr-md-3">
