--- a/Week1/Assignment20thDec/index.html
+++ b/Week1/Assignment20thDec/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/navbar.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
     <title>WADDCO - Fullstack Development Digital Solutions</title>
@@ -19,12 +20,12 @@
   </head>
   <body> 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-      <a class="my-0 mr-md-auto" href="#" style="color: black;font-weight: bolder;font-size: larger;">
+      <a class="my-0 mr-md-auto logo-link" href="index.html">
         <img src="https://themes.3rdwavemedia.com/coderpro/bs5/1.0/assets/images/site-logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
         WADDCO
       </a>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark active" href="#">Home</a>
+        <a class="p-2 text-dark active" href="index.html">Home</a>
         <a class="p-2 text-dark" href="#">About Us</a>
         <a class="p-2 text-dark" href="contact.html">Contact Us</a>
       </nav>
