Done with navbar combining

--- a/Week1/Assignment20thDec/contact.html
+++ b/Week1/Assignment20thDec/contact.html
@@ -28,9 +28,9 @@
         <a class="p-2 text-dark" href="#">About Us</a>
         <a class="p-2 text-dark active" href="contact.html">Contact Us</a>
       </nav>
-      <a class="btn btn-outline-primary" href="tel:+4733378901">Call Us</a>
+      <a class="btn btn-primary" href="tel:+4733378901">Call Us</a>
     </div>
-    <main role="main" style="padding-top: 150px;background-color: #F5F6FE;padding-bottom: 70px;">
+    <main role="main" class="main-container">
       
       <div class="container" >
         <h1 style="text-align: center;font-weight: 700;margin-bottom: 90px;" >CONTACT US</h1>
