Changed many things

--- a/Week1/Assignment20thDec/index.html
+++ b/Week1/Assignment20thDec/index.html
@@ -50,23 +50,23 @@
 
       <div class="container" style="text-align: center;" > 
         <!-- Example row of columns -->
-        <h2 style="text-align: center;padding-top: 50px;font-size:32px;font-weight: 700;">Why US?</h2>
+        <h2 class="col-h2">Why US?</h2>
         <p style="text-align: center;padding-bottom: 30px;">Some of our company's features</p>
-        <div class="row" style="padding-bottom: 30px;">
-          <div class="col-md-4" style="background-color: white; border-bottom-left-radius: 30px;">
-            <h5 style="font-weight: bold;padding-top: 25px;">Global Presence</h4>
+        <div class="row cards" style="padding-bottom: 30px;">
+          <div class="col-md-4" style=" border-bottom-left-radius: 30px;">
+            <h5 class="cards-h5">Global Presence</h4>
             <p>Our 500+ experts have successfully provided full-cycle IT services to our client network from 21 nations worldwide, with 350+ projects, and is expanding rapidly</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-primary" href="contact.html" role="button">Get in Touch &raquo;</a></p>
           </div>
-          <div class="col-md-4" style="background-color: white;border-radius: 5px;">
-            <h5 style="font-weight: 600;padding-top: 25px;">Our Clients</h5>
+          <div class="col-md-4" >
+            <h5 class="cards-h5">Our Clients</h5>
             <p>Proudly partner with 250+ clients from diverse industries including Banking & Finance, Automotive, Retail, Health Care, Education, Media & Entertainment</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-primary" href="contact.html" role="button">Get in Touch &raquo;</a></p>
           </div>
-          <div class="col-md-4" style="background-color: white;border-radius: 5px;border-top-right-radius: 30px;">
-            <h5 style="font-weight: 600;padding-top: 25px;">Our Offices</h5>
+          <div class="col-md-4" style="border-top-right-radius: 30px;">
+            <h5 class="cards-h5">Our Offices</h5>
             <p>With international offices located in multiple countries, we serve our Clients with main mission: Your Trust Is Our Ultimate Success. So come see our Team now!</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-primary" href="contact.html" role="button">Get in Touch &raquo;</a></p>
           </div>
         </div>
     
