--- a/Week1/Assignment20thDec/index.html
+++ b/Week1/Assignment20thDec/index.html
@@ -26,7 +26,7 @@
       </a>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark active" href="index.html">Home</a>
-        <a class="p-2 text-dark" href="#">About Us</a>
+        <a class="p-2 text-dark" href="#whyus">About Us</a>
         <a class="p-2 text-dark" href="contact.html">Contact Us</a>
       </nav>
       <a class="btn btn-primary" href="tel:+4733378901">Call Us</a>
@@ -39,7 +39,7 @@
         <div class="col-md-5 p-lg-5 mx-auto my-5">
           <h1 class="display-4" style="font-weight: 700;">WADDCO</h1>
           <p class="lead font-weight-normal">LEADING DIGITAL TRANSFORMATION PROVIDER WITH USER-CENTRIC SOLUTIONS FOR INDUSTRIES</p>
-          <a class="btn btn-primary" href="#">Download Portfolio</a>
+          <a class="btn btn-primary" href="https://ahmadraza.netlify.app/">Check Portfolio</a>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
         <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -50,7 +50,7 @@
 
       <div class="container" style="text-align: center;" > 
         <!-- Example row of columns -->
-        <h2 class="col-h2">Why US?</h2>
+        <h2 class="col-h2" id="whyus">Why US?</h2>
         <p style="text-align: center;padding-bottom: 30px;">Some of our company's features</p>
         <div class="row cards" style="padding-bottom: 30px;">
           <div class="col-md-4" style=" border-bottom-left-radius: 30px;">
