--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <nav>
-        
+        <a href="index.html">iamAhmed</a>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Skilss</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Clients</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <a href="#">Get In Touch</a>
     </nav>
 </body>
 </html>
