--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/index.css">
     <title>Ahmed Raza</title>
 </head>
 <body>
     <nav>
-        <a href="index.html">iamAhmed</a>
+        <a href="index.html" class="logo-heading">iamAhmed</a>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Skilss</a></li>
@@ -18,5 +19,15 @@
         </ul>
         <a href="#">Get In Touch</a>
     </nav>
+    <div>
+        <div class="name">
+            <img alt="Ahmed Raza" src="">
+        </div>
+        <div class="name">
+            <h1>iamAhmed</h1>
+            <p>I'm Ahmed and I am a full-stck developer</p>
+            <a href="#">Get in touch</a>
+        </div>
+    </div>
 </body>
 </html>
