--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <nav>
-        <a href="index.html" class="logo-heading">iamAhmed</a>
+        <a href="index.html" >
+            <h1 class="logo-heading">iam<span class="name">Ahmed</span></h1>
+        </a>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Skilss</a></li>
