--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -8,6 +8,7 @@
     <title>Ahmed Raza</title>
 </head>
 <body>
+    <section id="main">
     <nav>
         <a href="index.html" >
             <h1 class="logo-heading">iam<span class="name">Ahmed</span></h1>
@@ -21,7 +22,8 @@
         </ul>
         <a href="#">Get In Touch</a>
     </nav>
-    <div>
+    </section>
+    <div class="content">
         <div class="name">
             <img alt="Ahmed Raza" src="">
         </div>
