--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -24,13 +24,13 @@
     </nav>
     </section>
     <div class="content">
-        <div class="name">
+        <div class="model">
             <img alt="Ahmed Raza" src="">
         </div>
-        <div class="name">
-            <h1>iamAhmed</h1>
+        <div class="">
+            <h1 class="logo-heading">iam<span class="name">Ahmed</span></h1>
             <p>I'm Ahmed and I am a full-stck developer</p>
-            <a href="#">Get in touch</a>
+            <a href="#" class="portfolio-button">Get in touch</a>
         </div>
     </div>
 </body>
