--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -20,7 +20,9 @@
             <li><a href="#">Clients</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-        <a href="#">Get In Touch</a>
+        <div class="button-p mt-0">
+        <a href="#" class="portfolio-button">Get In Touch</a>
+        </div>
     </nav>
     </section>
     <div class="content">
@@ -30,7 +32,9 @@
         <div class="">
             <h1 class="logo-heading">iam<span class="name">Ahmed</span></h1>
             <p>I'm Ahmed and I am a full-stck developer</p>
+            
             <a href="#" class="portfolio-button">Get in touch</a>
+            
         </div>
     </div>
 </body>
