--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -27,14 +27,15 @@
     </section>
     <div class="content">
         <div class="model">
-            <img alt="Ahmed Raza" src="">
+            <img alt="ahmed-raza" src="https://media.istockphoto.com/photos/handsome-afro-student-posing-on-bookshelves-background-picture-id1171062918?k=20&m=1171062918&s=612x612&w=0&h=I6djuMs92BCgJaBv5iIsPALt2oZ8mYQU7ttF1hmhPkE=">
         </div>
-        <div class="">
+        <div class="main-text">
             <h1 class="logo-heading">iam<span class="name">Ahmed</span></h1>
             <p>I'm Ahmed and I am a full-stck developer</p>
-            
+            <p>I love building thorugh code</p>
+            <div class="button-p">
             <a href="#" class="portfolio-button">Get in touch</a>
-            
+            </div>
         </div>
     </div>
 </body>
