--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -38,5 +38,33 @@
             </div>
         </div>
     </div>
+<!-- Skills-->
+    <div class="row" style="display: flex;align-items: center;
+    justify-content: space-between;  margin-top: 10%;
+  margin-left: 5%;
+  margin-right: 5%;">
+        <div class="column">
+            <h1>My Expertise</h1>
+            <div class="row">
+                <i class="fab fa-html5"></i>
+             <h2>HTML</h2>
+             <p>We will write the desciption of the skill</p>
+            </div>
+            <div class="row">
+                
+                <h2>CSS</h2>
+                <p>We will write the desciption of the skill</p>
+               </div>
+               <div class="row">
+                <h2>Javascipt</h2>
+                <p>We will write the desciption of the skill</p>
+               </div>
+        </div>
+        <div class="column" > <img src="https://saadpasta.github.io/static/media/manOnTable.52be3144.svg" width="500px" height="auto" class="img-fluid"/></div>
+      </div>
+<!-- Projects-->
+<div class="row" style="text-align: center;">
+    <h1>My Projects</h1>
+  </div>
 </body>
 </html>
