--- a/Week2/Portfolio/index.html
+++ b/Week2/Portfolio/index.html
@@ -108,5 +108,8 @@
           <div class="w-100"></div>
         </div>
       </div>
+      <section id="skills">
+
+      </section>
 </body>
 </html>
