--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -94,5 +94,22 @@
     </div>
     
 </section>
+<!--  Projects Section -->
+<section id="my-projects">
+    <!-- Project Heading -->
+    <div class="skill-heading">
+        <span>My Skills</span>
+        <h2>My Expertise</h2>
+    </div>
+    <!-- Project Showcase -->
+    <div class="project-showcase">
+        <div class="project one">
+            <div id="hide">
+                <p>Description</p>
+                <a>Button(Press Me )</a>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
