--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -109,6 +109,18 @@
                 <a>Button(Press Me )</a>
             </div>
         </div>
+        <div class="project two">
+            <div id="hide">
+                <p>Description</p>
+                <a>Button(Press Me )</a>
+            </div>
+        </div>
+        <div class="project two">
+            <div id="hide">
+                <p>Description</p>
+                <a>Button(Press Me )</a>
+            </div>
+        </div>
     </div>
 </section>
 </body>
