--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -105,20 +105,20 @@
     <div class="project-showcase">
         <div class="project one">
             <div id="hide">
-                <p  class="project-text">Description</p>
-                <a class="project-btn">Button(Press Me )</a>
+                <p  class="project-text">This is the website</p>
+                <a class="project-btn">Visit Website</a>
             </div>
         </div>
         <div class="project two">
             <div id="hide">
-                <p class="project-text">Description</p>
-                <a class="project-btn">Button(Press Me )</a>
+                <p class="project-text">This is the website</p>
+                <a class="project-btn">Visit Website</a>
             </div>
         </div>
         <div class="project two">
             <div id="hide">
-                <p class="project-text">Description</p>
-                <a class="project-btn">Button(Press Me )</a>
+                <p class="project-text">This is the website</p>
+                <a class="project-btn">Visit Website</a>
             </div>
         </div>
     </div>
