Update index.html and index.css

--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -51,7 +51,7 @@
 <section id="skills">
     <!--skills text-->
     <div class="skill-text">
-        <div class="skill-heading">
+        <div class="skill-heading ">
             <span>My Skills</span>
             <h2>My Expertise</h2>
         </div>
@@ -97,7 +97,7 @@
 <!--  Projects Section -->
 <section id="my-projects">
     <!-- Project Heading -->
-    <div class="skill-heading">
+    <div class="skill-heading ml-5">
         <span>My Skills</span>
         <h2>My Expertise</h2>
     </div>
