Update index.html and index.css
Create the button

--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -122,6 +122,8 @@
             </div>
         </div>
     </div>
+    <!-- Project Showcase -->
+    <a href="" class="view-more-btn">See More Projects</a>
 </section>
 </body>
 </html>
