--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -124,6 +124,46 @@
     </div>
     <!-- Project Showcase -->
     <a href="" class="view-more-btn">See More Projects</a>
+    
+</section>
+<!-- Client Section -->
+<section id="client">
+    <!-- Review Heading -->
+    <div class="skill-heading ml-5">
+        <span>Reviews</span>
+        <h2>Happy Customers! 5+ Rating</h2>
+    </div>
+
+    <!-- Parent Container -->
+    <div class="c-box-container">
+        <!-- Client Testimonial #1 -->
+        <div class="client-box">
+            <img src="" alt="testimonial#1"/>
+            <div class="start">
+                <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            </div>
+            <p>I had a great experience working with Raheel on multiple projects and love his professionalism. Five stars.</p>
+            <a href="">Read More</a>
+        </div>
+        <!-- Client Testimonial #2 -->
+        <div class="client-box">
+            <img src="" alt="testimonial#1"/>
+            <div class="start">
+                <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            </div>
+            <p>I had a great experience working with Raheel on multiple projects and love his professionalism. Five stars.</p>
+            <a href="">Read More</a>
+        </div>
+        <!-- Client Testimonial #3 -->
+        <div class="client-box">
+            <img src="" alt="testimonial#1"/>
+            <div class="start">
+                <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            </div>
+            <p>I had a great experience working with Raheel on multiple projects and love his professionalism. Five stars.</p>
+            <a href="">Read More</a>
+        </div>
+    </div>
 </section>
 </body>
 </html>
