--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -138,8 +138,8 @@
     <div class="c-box-container">
         <!-- Client Testimonial #1 -->
         <div class="client-box">
-            <img src="" alt="testimonial#1"/>
-            <div class="start">
+            <img src="assets/imgs/client.png" alt="testimonial#1"/>
+            <div class="star">
                 <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
             </div>
             <p>I had a great experience working with Raheel on multiple projects and love his professionalism. Five stars.</p>
@@ -147,8 +147,8 @@
         </div>
         <!-- Client Testimonial #2 -->
         <div class="client-box">
-            <img src="" alt="testimonial#1"/>
-            <div class="start">
+            <img src="assets/imgs/client.png" alt="testimonial#1"/>
+            <div class="star">
                 <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
             </div>
             <p>I had a great experience working with Raheel on multiple projects and love his professionalism. Five stars.</p>
@@ -156,8 +156,8 @@
         </div>
         <!-- Client Testimonial #3 -->
         <div class="client-box">
-            <img src="" alt="testimonial#1"/>
-            <div class="start">
+            <img src="assets/imgs/client.png" alt="testimonial#1"/>
+            <div class="star">
                 <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
             </div>
             <p>I had a great experience working with Raheel on multiple projects and love his professionalism. Five stars.</p>
