--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -165,5 +165,14 @@
         </div>
     </div>
 </section>
+<!-- Contact Us section -->
+<section id="contact">
+    <img src="" alt=""/>
+    <h3>Let's work together</h3>
+    <div class="contact-input">
+        <input type="email" placeholder="ahmed.raza@thedevnation.com">
+        <a href="">Let's Connect</a>
+    </div>
+</section>
 </body>
 </html>
