--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -174,5 +174,9 @@
         <a href="">Let's Connect</a>
     </div>
 </section>
+<footer>
+    <p>iamAhmed Raza</p>
+    <p>Copyright 2021 - Ahmed Raza</p>
+</footer>
 </body>
 </html>
