--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -8,6 +8,48 @@
 
 </head>
 <body>
-    
+    <!--
+        nav tag with class nav-tag
+        it would have 3 columns
+        1. a tag with website name and link
+        Family
+        Montserrat, sans-serif;
+        Style
+        normal
+        Weight
+        400
+        Size
+        16px
+        Line Height
+        26px
+        Color
+        #333333
+        2. ul with 4 li
+        Montserrat, sans-serif;
+        Style
+        normal
+        Weight
+        500
+        Size
+        15px
+        Line Height
+        26px
+        Color
+        #ffffff
+        3. a tag with button to Buy Template 
+        Montserrat, sans-serif;
+        Style
+        normal
+        Weight
+        400
+        Size
+        16px
+        Line Height
+        26px
+        Color
+        #3d455a
+
+
+    -->
 </body>
 </html>
