--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banky template</title>
-
+     <link rel="stylesheet" href="assets/index.css">
 </head>
 <body>
+    <!-- Navbar Section -->
+    <section id="navbar-sec">
+        <!-- Navbar code -->
+        <nav>
+            <!-- Logo -->
+            <a href="">
+                <h1>Spanky</h1>
+            </a>
+            <!-- Menu Items -->
+            <ul class="menu-item">
+                <li><a href="">How it works</a></li>
+                <li><a href="">Features</a></li>
+                <li><a href="">Testimonials</a></li>
+                <li><a href="">FAQs</a></li>
+            </ul>
+            <!-- Call to Action -->
+            <a href="" class="call-to-cat-btn">Buy Template →</a>
+        </nav>
+    </section>
     <!--
         nav tag with class nav-tag
         it would have 3 columns
