--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -8,25 +8,28 @@
      <link rel="stylesheet" href="assets/index.css">
 </head>
 <body>
-    <!-- Navbar Section -->
-    <section id="navbar-sec">
-        <!-- Navbar code -->
-        <nav>
-            <!-- Logo -->
-            <a href="">
-                <h1>Spanky</h1>
-            </a>
-            <!-- Menu Items -->
-            <ul class="menu-item">
-                <li><a href="">How it works</a></li>
-                <li><a href="">Features</a></li>
-                <li><a href="">Testimonials</a></li>
-                <li><a href="">FAQs</a></li>
-            </ul>
-            <!-- Call to Action -->
-            <a href="" class="call-to-cat-btn">Buy Template →</a>
-        </nav>
-    </section>
+    <!-- Uppermost div for the color -->
+    <div class="uppest-div">
+        <!-- Navbar Section -->
+        <section id="navbar-sec">
+            <!-- Navbar code -->
+            <nav>
+                <!-- Logo -->
+                <a href="">
+                    <h1>Spanky</h1>
+                </a>
+                <!-- Menu Items -->
+                <ul class="menu-item">
+                    <li><a href="">How it works</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Testimonials</a></li>
+                    <li><a href="">FAQs</a></li>
+                </ul>
+                <!-- Call to Action -->
+                <a href="" class="call-to-cat-btn">Buy Template <span class="arrow-btn"> →</span></a>
+            </nav>
+        </section>
+    </div>
     <!--
         nav tag with class nav-tag
         it would have 3 columns
