--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -26,52 +26,68 @@
                     <li><a href="">FAQs</a></li>
                 </ul>
                 <!-- Call to Action -->
-                <a href="" class="call-to-cat-btn">Buy Template <span class="arrow-btn"> →</span></a>
+                <a href="" class="call-to-act-btn">Buy Template <span class="arrow-btn"> →</span></a>
             </nav>
         </section>
     </div>
     <!--
-        nav tag with class nav-tag
-        it would have 3 columns
-        1. a tag with website name and link
-        Family
-        Montserrat, sans-serif;
-        Style
-        normal
-        Weight
-        400
-        Size
-        16px
-        Line Height
-        26px
-        Color
-        #333333
-        2. ul with 4 li
-        Montserrat, sans-serif;
-        Style
-        normal
-        Weight
-        500
-        Size
-        15px
-        Line Height
-        26px
-        Color
-        #ffffff
-        3. a tag with button to Buy Template 
-        Montserrat, sans-serif;
-        Style
-        normal
-        Weight
-        400
-        Size
-        16px
-        Line Height
-        26px
-        Color
-        #3d455a
+    -div.first-div
+    display: flex;
+    width: 95%;
+    max-width: 1170px;
+    margin-top: 140px;
+    margin-bottom: 140px;
 
-
+        -div.first-text-div
+            -h1.main-text-title
+                margin-top: 0;
+                margin-bottom: 0;
+                color: #fff;
+                font-size: 56px;
+                line-height: 70px;
+                Weight
+                800
+                Color
+                #ffffff
+                -span a text with some properties
+                background-image: url(https://assets.website-files.com/6115ba6…/61165ea…_Shape%20Green.svg);
+                background-position: 50% 50%;
+                background-size: contain;
+                background-repeat: no-repeat;
+            -p.main-text-text
+            margin-top: 30px;
+            color: #bfbfbf;
+            font-size: 18px;
+            line-height: 30px;
+            (Weight
+                400
+                Size
+                18px
+                Line Height
+                30px
+                Color
+                #bfbfbf)
+            -div main-text-btn
+                display: grid;
+                margin-top: 60px;
+                grid-column-gap: 30px;
+                -ms-grid-columns: 1fr 1fr;
+                grid-template-columns: 1fr 1fr;
+            -div.call-to-act-btn-div
+             - a tag with class main-btn
+                    padding: 16px 24px;
+                    justify-content:center;
+                    align-items: center;
+                    border-radius: 6px;
+                    background-color: #fdd241;
+                        color: #191b35;
+                    font-size: 16px;
+                    font-weight: 500;
+                    text-align: center;
+                    letter-spacing: .5px;
+             -a tag with call-to-act-btn
+        - div.first-div-img
+            -img
     -->
 </body>
 </html>
