--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -29,7 +29,25 @@
                 <a href="" class="call-to-act-btn">Buy Template <span class="arrow-btn"> →</span></a>
             </nav>
         </section>
+        <!-- Landing Page - Main Section -->
+        <div class="first-div">
+            <!-- Div on the left -->
+            <div class="text-div">
+                <h1 class="title-text">Manage Your Finances <span>Easily</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis turpis laoreet.</p>
+                <!--Div with both the button -->
+                <div class="first-div-btns">
+                    <a href="" class="main-btn">Download App</a>
+                    <a href="" class="call-to-act-btn">Buy Template <span class="arrow-btn"> →</span></a>
+                </div>
+            </div>
+            <!-- Div on the right -->
+            <div class="img-div">
+                <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea5a463023f2d6a3486_Phone%20Hero.png" alt="App screen">
+            </div>
+        </div>
     </div>
+
     <!--
     -div.first-div
     display: flex;
@@ -38,8 +56,8 @@
     margin-top: 140px;
     margin-bottom: 140px;
 
-        -div.first-text-div
-            -h1.main-text-title
+        -div.text-div
+            -h1.text-title
                 margin-top: 0;
                 margin-bottom: 0;
                 color: #fff;
@@ -73,18 +91,18 @@
                 grid-column-gap: 30px;
                 -ms-grid-columns: 1fr 1fr;
                 grid-template-columns: 1fr 1fr;
-            -div.call-to-act-btn-div
-             - a tag with class main-btn
-                    padding: 16px 24px;
-                    justify-content:center;
-                    align-items: center;
-                    border-radius: 6px;
-                    background-color: #fdd241;
-                        color: #191b35;
-                    font-size: 16px;
-                    font-weight: 500;
-                    text-align: center;
-                    letter-spacing: .5px;
+                -div.call-to-act-btn-div
+                - a tag with class main-btn
+                        padding: 16px 24px;
+                        justify-content:center;
+                        align-items: center;
+                        border-radius: 6px;
+                        background-color: #fdd241;
+                            color: #191b35;
+                        font-size: 16px;
+                        font-weight: 500;
+                        text-align: center;
+                        letter-spacing: .5px;
              -a tag with call-to-act-btn
         - div.first-div-img
             -img
